fix button text not centered

--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 }
 
 .calcButton {
-    aspect-ratio: 1/1;
+    /* aspect-ratio: 1/1; */
     background-color: lightgray;
     display: flex;
     justify-content: center;
